[project]
name = "none_bot"
version = "0.1.0"
description = "nbot"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_sticker_saver", "nonebot_plugin_memes","nonebot_plugin_apscheduler","nonebot_plugin_imagetools"]
plugin_dirs = []
builtin_plugins = ["echo"]
